# voice_recognition_system

./: .gitignore  2_stages_phase1_trig_vint.py  Edge_Labeling_node.py  Perception_node.py  README.md  mic_finder.py  phase1_trig_vint.py  spin_node.py  voice_assist_LLM.py  voice_assist_ROS.py  voice_assist_ROS_2.py  voice_assist_ROS_woGUI.py  voice_assist_pose.py  voice_assist_pose_test.py  vosk_node.py
edge_pose_test/: .~lock.prompt_test_20260219_145105.xlsx#  Assesment_node.py  Edge_Labeling_node.py  Perception_node.py  Task_Manager_node.py  goal_forward_node.py  vosk_node.py
install/: local_setup.bash  local_setup.ps1  local_setup.sh  local_setup.zsh  setup.sh
install/vint_ros/share/vint_ros/: package.bash  package.zsh
log/: latest_build
vint_ros/: CMakeLists.txt  package.xml  setup.cfg  setup.py
vint_ros/conf/: conf.yaml  voice_command_evaluation.rviz
vint_ros/launch/: vint.launch.py  vint_room_ref.launch.py  vint_text.launch.py  voice_system.launch.py
vint_ros/others/: data_base.yaml  data_base_100.yaml  data_base_90.yaml  exp_data_record.sh  prompts.yaml
vint_ros/vint_ros/: .voice_assist_ROS_woGUI.py.swp  Assesment_node.py  Assesment_text_node.py  Edge_Labeling_node.py  Goal_to_Nav2_node.py  Perception_node.py  Task_Manager_node.py  dummy.py  map_broadcaster.py  phase1_trig_vint.py  prompt_test_20260218_122038.xlsx  prompt_test_20260218_125251.xlsx  prompt_test_20260218_133518.xlsx  prompt_test_20260218_135847.xlsx  prompt_test_20260218_142615.xlsx  prompt_test_20260218_142927.xlsx  prompt_test_20260218_143322.xlsx  prompt_test_20260218_143511.xlsx  prompt_test_20260218_143901.xlsx  prompt_test_20260218_144549.xlsx  prompt_test_20260218_144907.xlsx  prompt_test_20260218_144950.xlsx  prompt_test_20260218_145659.xlsx  prompt_test_20260218_150110.xlsx  test_dummy.py  voice_assist_ROS_woGUI.py  vosk_node.py
