<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>vint_ros</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="makino@ai.iit.tsukuba.ac.jp">orin</maintainer>
  <license>TODO: License declaration</license>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>
  <exec_depend>python-yaml</exec_depend>
  <exec_depend>python-rclpy</exec_depend>
  <exec_depend>python-sys</exec_depend>
  <exec_depend>python-os</exec_depend>
  <exec_depend>python-json</exec_depend>
  <exec_depend>python-vosk</exec_depend>
  <exec_depend>python-sounddevice</exec_depend>
  <exec_depend>python-queue</exec_depend>
  <exec_depend>python-threading</exec_depend>
  <exec_depend>python-time</exec_depend>
  
  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
